@@ -6,7 +6,8 @@ New features:
 -
 Bug fixes:
 ~~~~~~~~~~
--
+- cpsmailboxer installation before cpsdocument installation
+
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - add a method to verify the presence of a Virtual Host Monster in the Zope 
